# AutoCpp

./: README.md  config.yml  main.py  main1.py
autocpp/: __init__.py  checker.py  clearner.py  cmake_tools.py  compiler.py  cproject.py  cxxproject.py  datamap.py
autocpp1/: __init__.py  compiler.py  cxxproject.py  datamap.py  fileio.py
data/demo2/: question0.cpp
demo/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
working/: CMakeLists.txt
working/task0/: readme.md
working/task1/: readme.md
working/task2/: readme.md
